apps/core/longhorn/base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress-traefik
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.tuntelder.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
          # middlewares:
          #   - name: authentik
          #     namespace: edge
  tls:
    certResolver: letsencrypt
